--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test:verbose": "jest --passWithNoTests --runInBand --verbose"
   },
   "devDependencies": {
+    "@shelf/jest-mongodb": "^4.3.2",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.20",
